CHATS_SIT/force-app/main/default/objects/T_SERV_PERIOD__c.object
<CustomObject>
    <description>Service period for payroll</description>
    <fields>
        <fullName>Future_Payment__c</fullName>
        <label>Future Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BATCH_FILE_PMT__c</fullName>
        <label>Payment Batch File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BATCH_PRCS_PMT__c</fullName>
        <label>Payment Batch Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>Service_Period_Dates__c</fullName>
        <description>Used for the sub payment search logic for service period lookup</description>
        <formula>TEXT(MONTH(DTE_BEGIN_EFFV__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(DTE_BEGIN_EFFV__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(DTE_BEGIN_EFFV__c)) &amp; &apos; To &apos; &amp;
TEXT(MONTH(DTE_END_EFFV__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(DTE_END_EFFV__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(DTE_END_EFFV__c))</formula>
        <label>Service Period Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV_Formatted__c</fullName>
        <formula>TEXT(MONTH(DTE_BEGIN_EFFV__c))+&quot;-&quot; +TEXT(DAY(DTE_BEGIN_EFFV__c))+&quot;-&quot; +TEXT(YEAR(DTE_BEGIN_EFFV__c))</formula>
        <label>Effective Begin Date (MM-DD-YYYY)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV_Formatted__c</fullName>
        <formula>TEXT(MONTH(DTE_END_EFFV__c))+&quot;-&quot; +TEXT(DAY(DTE_END_EFFV__c))+&quot;-&quot; +TEXT(YEAR(DTE_END_EFFV__c))</formula>
        <label>Effective End Date (MM-DD-YYYY)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Calculations_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Calculations Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Period_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Period Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Service Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Period ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>