CHATS_SIT/force-app/main/default/objects/T_SERV_PERIOD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DTE_BEGIN_EFFV__c</columns>
    <columns>DTE_END_EFFV__c</columns>
    <columns>Service_Period_Dates__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>